--- a/html/css/welcome.css
+++ b/html/css/welcome.css
@@ -25,8 +25,22 @@ body {
 }
 
 .content {
-    padding-top: 200px;
     text-align: center;
+}
+
+.content.pad-50 {
+	padding-top: 50px;
+}
+
+.content.pad-200 {
+	padding-top: 200px;
+}
+
+.welc-checks {
+	position: absolute;
+	bottom: 0;
+	padding-bottom: 20px;
+	padding-left: 20px;
 }
 
 /* ==================================================
@@ -41,8 +55,14 @@ body {
     font-size: 3.5em;
 }
 
-.welcome-text.small{
+.welcome-text.medium{
     font-size: 1.5em;
+}
+
+.welcome-text.small{
+    font-size: 0.8em;
+	font-weight: 500;
+    text-align: left;	
 }
 
 /* ==================================================
